# au-cg

./: .gitignore  .gitmodules  README.md
bloom/: .gitignore  CMakeLists.txt  README.md  additive.fsh  blur.fsh  debug.fsh  geom.vsh  light.fsh  threshold.fsh
bloom/src/: AdditivePass.cpp  AdditivePass.h  GeometryPass.cpp  Light.h  LightPass.cpp  LightPass.h  PassCommon.cpp  PassCommon.h  TexturePass.h  atb.cpp  gl_holder.cpp  gl_holder.h  main.cpp
common/: AbstractPass.cpp  AbstractPass.h  PassthroughPass.h  controls.cpp  controls.h  glfw_window_manager.cpp  glfw_window_manager.h  glut_window_manager.cpp  glut_window_manager.h  model.cpp  scene.h  shader.cpp  window_manager.cpp  window_manager.h
common/wrappers/: AllWrappersFwd.h  Framebuffer.cpp  Framebuffer.h  Program.cpp  Program.h  Texture.cpp  Texture.h  texture.h
deferred/: .gitignore  CMakeLists.txt  PassthroughTexture.vsh  SimpleTexture.fsh  additive.fsh  blur.fsh  debug.fsh  debug.vsh  first.fsh  first.vsh  geom.fsh  geom.vsh  light.fsh  light.vsh  sagar.mtl  threshold.fsh
deferred/src/: AdditivePass.cpp  AdditivePass.h  BlurPass.cpp  BlurPass.h  GeometryPass.cpp  GeometryPass.h  Light.h  LightPass.cpp  LightPass.h  PassCommon.cpp  PassCommon.h  TexturePass.cpp  TexturePass.h  ThresholdPass.cpp  ThresholdPass.h  atb.cpp  atb.h  gl_holder.cpp  gl_holder.h
fractal/: CMakeLists.txt  README.md  TODO  fractal.sln  fractal.vcxproj  fractal.vcxproj.filters  texture.fsh  transform.vsh
fractal-qt/: fractal-qt.pro  main.cpp  mainwindow.cpp  mainwindow.ui  my_opengl_widget.cpp  my_opengl_widget.h  shader.cpp  shader.hpp  texture.fsh  texture_loader.cpp  texture_loader.h  transform.vsh
fractal/src/: atb.cpp  atb.h  gl_holder.cpp  gl_holder.h  glfw_window_manager.cpp  glfw_window_manager.h  main.cpp  points.cpp  points.h  shader.cpp  shader.hpp  texture_loader.cpp  texture_loader.h
object/: .gitignore  CMakeLists.txt  DepthRTT.frag  DepthRTT.vert  Passthrough.vertexshader  README.md  SimpleTexture.fragmentshader  fragment_shader.frag  scene.blend  scene.mtl  shader.frag  shader.vert  shadow_mapping.frag  vertex_shader.vert
object/src/: GLHolder.cpp  GLHolder.h  controls.cpp  controls.hpp  light.cpp  light.h  main.cpp  model.cpp  model.h
salute/: CMakeLists.txt  combine.fsh  combine_simple.fsh  particle.fsh  particle.vsh  pass_texture.vsh  salute.sln  salute.vcxproj  salute.vcxproj.filters  sky.fsh
salute/src/: AbstractPass.cpp  AbstractPass.h  CombinerPass.cpp  CombinerPass.h  FrameCombinerPass.cpp  FrameCombinerPass.h  FramePass.cpp  FramePass.h  PassthroughPass.cpp  PassthroughPass.h  SaluteCombinerPass.cpp  SaluteCombinerPass.h  SalutePass.cpp  SalutePass.h  SkyPass.cpp  SkyPass.h  gl_holder.cpp  gl_holder.h  main.cpp
salute/src/wrappers/: AllWrappers.h  Framebuffer.cpp  Program.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
slot_machine/: CMakeLists.txt  FPSRenderPass.h  cell.fsh  class_description.txt  pass_texture.fsh  pass_texture.vsh  pass_texture_selective.fsh  pass_texture_start.fsh  slot_machine.sln  slot_machine.vcxproj  slot_machine.vcxproj.filters  text.fsh  text.vsh
slot_machine/src/: Button.cpp  Button.h  CellHolder.cpp  CellHolder.h  CellPass.cpp  CellPass.h  CellsPass.cpp  CellsPass.h  FPSRenderPass.cpp  FPSRenderPass.h  StartButton.cpp  StartButton.h  StartButtonPass.cpp  StartButtonPass.h  gl_holder.cpp  gl_holder.h  main.cpp  resources.h
slot_machine/src/color/: BlinkColor.cpp  BlinkColor.h  ColorSupplier.h  ConstantColor.cpp  ConstantColor.h
slot_machine/src/roll/: ExactRoll.cpp  ExactRoll.h  NextStepRoll.cpp  NextStepRoll.h  RandomRoll.cpp  RandomRoll.h  Roll.h
